Texto de alerta implementado pero comentado
Proximamente habrá un texto que notifique al jugador cuando está llegando a ciertos momentos del juego donde se produce una reducción del dinero que va a conseguir con los pedidos

Está todo comentado ya que he tenido ciertos problemas.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,11 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "c2425-Grupo07.sln"
+    "dotnet.defaultSolution": "c2425-Grupo07.sln",
+    "github.copilot.enable": {
+        "*": true,
+        "plaintext": false,
+        "markdown": false,
+        "scminput": false
+    }
 }
